[package]
name = "moq_vr_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bincode = "1"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
hang = "0.15.8"
moq-lite = { version = "0.15.15", features = ["serde"] }
moq-media = "0.0.1"
moq-native = "0.13.13"
openh264 = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "tokio-macros"] }
tokio-tungstenite = "0.29.0"
toml = { version = "1.1.2", features = ["serde"] }
tracing = "0.1.44"
url = "2.5.8"
